[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/menu/menu_cards/fixed_menu_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/menu/menu_cards/pause_menu_card.gd" type="Script" id=2]
[ext_resource path="res://gui/menu/menu_rows/button_menu_row.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/textures/gui/icons/save.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/gui/icons/next.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/gui/icons/quit.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/gui/icons/settings.png" type="Texture" id=7]
[ext_resource path="res://resources/textures/gui/icons/load.png" type="Texture" id=8]

[node name="PauseMenuCard" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="CenterContainer" index="0"]
margin_top = 55.0
margin_bottom = 305.0

[node name="HeadingLabel" parent="CenterContainer/VBoxContainer" index="0"]
text = "HEADING.PAUSED"

[node name="MenuList" parent="CenterContainer/VBoxContainer" index="2"]
margin_bottom = 242.0

[node name="ResumeGameButton" parent="CenterContainer/VBoxContainer/MenuList" index="0" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 512.0
tooltip = "TOOLTIP.BUTTON.RESUME_GAME"
text = "BUTTON.RESUME_GAME"
icon = ExtResource( 5 )
press_sound = 2

[node name="QuickSaveButton" parent="CenterContainer/VBoxContainer/MenuList" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 36.0
margin_right = 512.0
margin_bottom = 68.0
appearance_condition = 2
tooltip = "TOOLTIP.BUTTON.DEBUG.QUICK_SAVE"
text = "BUTTON.DEBUG.QUICK_SAVE"
icon = ExtResource( 4 )

[node name="QuickLoadButton" parent="CenterContainer/VBoxContainer/MenuList" index="2" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 72.0
margin_right = 512.0
margin_bottom = 104.0
appearance_condition = 2
tooltip = "TOOLTIP.BUTTON.DEBUG.QUICK_LOAD"
text = "BUTTON.DEBUG.QUICK_LOAD"
icon = ExtResource( 8 )

[node name="LoadCheckpointButton" parent="CenterContainer/VBoxContainer/MenuList" index="3" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 108.0
margin_right = 512.0
margin_bottom = 140.0
appearance_condition = 2
tooltip = "TOOLTIP.BUTTON.DEBUG.LOAD_CHECKPOINT"
text = "BUTTON.DEBUG.LOAD_CHECKPOINT"
icon = ExtResource( 8 )

[node name="SettingsButton" parent="CenterContainer/VBoxContainer/MenuList" index="4" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 144.0
margin_right = 512.0
margin_bottom = 176.0
tooltip = "TOOLTIP.BUTTON.SETTINGS"
text = "BUTTON.SETTINGS"
icon = ExtResource( 7 )

[node name="QuitToMainMenuButton" parent="CenterContainer/VBoxContainer/MenuList" index="5" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 180.0
margin_right = 512.0
margin_bottom = 212.0
tooltip = "TOOLTIP.BUTTON.QUIT_TO_MAIN_MENU"
text = "BUTTON.QUIT_TO_MAIN_MENU"
icon = ExtResource( 6 )
press_sound = 2

[node name="MenuSeparator" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 246.0
margin_bottom = 250.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/ResumeGameButton" to="." method="request_pop"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuickSaveButton" to="." method="_on_quick_save_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuickLoadButton" to="." method="_on_quick_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/LoadCheckpointButton" to="." method="_on_load_checkpoint_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/SettingsButton" to="." method="request_push" binds= [ "settings" ]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuitToMainMenuButton" to="." method="request_push" binds= [ "pause_quit" ]]
